# AI-DevOps-K8s-Agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/ai/: client.py  prompt.py  reasoner.py
backend/app/api/: health.py  investigate.py
backend/app/core/: config.py  logging.py
backend/app/kubernetes/: executor.py  inspector.py
backend/app/models/: schemas.py
backend/app/services/: investigation.py  orchestrator.py
backend/tests/: test_errors.py  test_executor.py  test_inspector.py  test_reasoner.py
docs/: ARCHITECTURE.md  PLAN.md  test-scenarios.md
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: AuthProvider.tsx  ClusterPicker.tsx  DiagnosisModal.tsx  HistoryList.tsx  InvestigationChecklist.tsx  RootCauseCard.tsx  ThemeToggle.tsx
frontend/hooks/: useInvestigation.ts
frontend/lib/: insforge.ts
frontend/services/: api.ts  history.ts
frontend/types/: investigation.ts
k8s-test/: 00-namespace.yaml  crashloop.yaml  imagepull.yaml  oomkilled.yaml  selector-mismatch.yaml
prompts/: phase-1-setup.md  phase-2-investigation.md  phase-3-reasoning.md  phase-4-dashboard.md  phase-5-integration.md
