[project]
name = "ai-kubernetes-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the on-demand AI Kubernetes troubleshooting agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "loguru>=0.7",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
